# TrilogyOCR_Pipeline

./: .env.example  .gitignore  Makefile  Mistral_Jackson_Tester.ipynb  README.md  RUNME.md  pyproject.toml  requirements.txt  run_web.sh  trilogy_ocr_pipeline.py
.github/workflows/: ci.yml
TrilogyVSCode/: README.md  WFJ-Diversified_Check_V2  WJF-DIVERSIFIED-20260127-$1031.33-5001502951 (1).csv  WJF-Diversified_Check_V1.py  accuracy_checker.py  diff_report.csv  output.csv  output_structured_fixed.csv  output_structured_fixed2.csv  output_structured_test.csv  parse_output_to_structured.py
src/trilogy_ocr/: __init__.py  cli.py  pipeline.py  web.py
src/trilogy_ocr/static/: app.css
src/trilogy_ocr/templates/: index.html  preview.html  result.html
tests/: test_pipeline.py
