[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trilogy-ocr-pipeline"
version = "0.1.0"
description = "OCR pipeline for royalty-check PDFs using Mistral vision models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mistralai>=1.2.0",
  "pymupdf>=1.24.0",
  "pillow>=10.0.0",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
trilogy-ocr = "trilogy_ocr.cli:main"
trilogy-ocr-web = "trilogy_ocr.web:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trilogy_ocr = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
